tools/tests/errors/surf_sw_03.ki
# a switch body with no case/default arms is rejected
switch 1:
    pass
